logs/dag_id=test_dag2/run_id=manual__2025-03-27T19:29:16.958415+00:00/task_id=move_to_transformation/attempt=1.log
[2025-03-27T20:29:25.615+0100] {taskinstance.py:1956} INFO - Dependencies all met for dep_context=non-requeueable deps ti=<TaskInstance: test_dag2.move_to_transformation manual__2025-03-27T19:29:16.958415+00:00 [queued]>
[2025-03-27T20:29:25.640+0100] {taskinstance.py:1956} INFO - Dependencies all met for dep_context=requeueable deps ti=<TaskInstance: test_dag2.move_to_transformation manual__2025-03-27T19:29:16.958415+00:00 [queued]>
[2025-03-27T20:29:25.642+0100] {taskinstance.py:2170} INFO - Starting attempt 1 of 1
[2025-03-27T20:29:25.680+0100] {taskinstance.py:2191} INFO - Executing <Task(PythonOperator): move_to_transformation> on 2025-03-27 19:29:16.958415+00:00
[2025-03-27T20:29:25.689+0100] {standard_task_runner.py:60} INFO - Started process 24434 to run task
[2025-03-27T20:29:25.697+0100] {standard_task_runner.py:87} INFO - Running: ['airflow', 'tasks', 'run', 'test_dag2', 'move_to_transformation', 'manual__2025-03-27T19:29:16.958415+00:00', '--job-id', '118', '--raw', '--subdir', 'DAGS_FOLDER/complete.py', '--cfg-path', '/tmp/tmpsg6og2ty']
[2025-03-27T20:29:25.702+0100] {standard_task_runner.py:88} INFO - Job 118: Subtask move_to_transformation
[2025-03-27T20:29:25.849+0100] {task_command.py:423} INFO - Running <TaskInstance: test_dag2.move_to_transformation manual__2025-03-27T19:29:16.958415+00:00 [running]> on host LAPTOP-A4DHQTS9.
[2025-03-27T20:29:26.124+0100] {taskinstance.py:2480} INFO - Exporting env vars: AIRFLOW_CTX_DAG_OWNER='airflow' AIRFLOW_CTX_DAG_ID='test_dag2' AIRFLOW_CTX_TASK_ID='move_to_transformation' AIRFLOW_CTX_EXECUTION_DATE='2025-03-27T19:29:16.958415+00:00' AIRFLOW_CTX_TRY_NUMBER='1' AIRFLOW_CTX_DAG_RUN_ID='manual__2025-03-27T19:29:16.958415+00:00'
[2025-03-27T20:29:26.160+0100] {base.py:83} INFO - Using connection ID 'destination_db' for task execution.
[2025-03-27T20:29:26.182+0100] {sql.py:450} INFO - Running statement: 
        MERGE INTO transformation.trans_prog3 AS target
        USING staging.stg_prog3 AS source
        ON target.uid = source.uid
        WHEN MATCHED AND target.lastupdated < source.lastupdated
        THEN UPDATE SET lastupdated = source.lastupdated
        WHEN NOT MATCHED
        THEN INSERT *;
    , parameters: None
[2025-03-27T20:29:26.185+0100] {taskinstance.py:2698} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/philip/de_engineering/airflow_projects/airflow1/venv/lib/python3.10/site-packages/airflow/models/taskinstance.py", line 433, in _execute_task
    result = execute_callable(context=context, **execute_callable_kwargs)
  File "/home/philip/de_engineering/airflow_projects/airflow1/venv/lib/python3.10/site-packages/airflow/operators/python.py", line 199, in execute
    return_value = self.execute_callable()
  File "/home/philip/de_engineering/airflow_projects/airflow1/venv/lib/python3.10/site-packages/airflow/operators/python.py", line 216, in execute_callable
    return self.python_callable(*self.op_args, **self.op_kwargs)
  File "/home/philip/airflow/dags/complete.py", line 105, in move_to_transformation
    dest_pg_hook.run(merge_query)
  File "/home/philip/de_engineering/airflow_projects/airflow1/venv/lib/python3.10/site-packages/airflow/providers/common/sql/hooks/sql.py", line 398, in run
    self._run_command(cur, sql_statement, parameters)
  File "/home/philip/de_engineering/airflow_projects/airflow1/venv/lib/python3.10/site-packages/airflow/providers/common/sql/hooks/sql.py", line 455, in _run_command
    cur.execute(sql_statement)
psycopg2.errors.SyntaxError: syntax error at or near "MERGE"
LINE 2:         MERGE INTO transformation.trans_prog3 AS target
                ^

[2025-03-27T20:29:26.215+0100] {taskinstance.py:1138} INFO - Marking task as FAILED. dag_id=test_dag2, task_id=move_to_transformation, execution_date=20250327T192916, start_date=20250327T192925, end_date=20250327T192926
[2025-03-27T20:29:26.245+0100] {standard_task_runner.py:107} ERROR - Failed to execute job 118 for task move_to_transformation (syntax error at or near "MERGE"
LINE 2:         MERGE INTO transformation.trans_prog3 AS target
                ^
; 24434)
[2025-03-27T20:29:26.278+0100] {local_task_job_runner.py:234} INFO - Task exited with return code 1
[2025-03-27T20:29:26.339+0100] {taskinstance.py:3280} INFO - 0 downstream tasks scheduled from follow-on schedule check
